Exercicio de Casa

--- a/HTML/HTML-06-table/index.html
+++ b/HTML/HTML-06-table/index.html
@@ -44,7 +44,7 @@
 <br>
      <!--Excercio 1 -->
 
-     <table style="border: 1px;si;">
+     <table style="border: 1px;si">
 
         <!--thead: cabeçario -->
         <!--tboody: conteúdo -->
