--- a/CSS/CSS02-ConfigTexto/ExercioCasa/Index.html
+++ b/CSS/CSS02-ConfigTexto/ExercioCasa/Index.html
@@ -9,8 +9,8 @@
     <h1>Squid Game</h1>
 
     <p>
-    grupo de jovens médicos do Hospital Grace Mercy West, de Seattle, que começaram a carreira na própria instituição como residentes. Um dos jovens médicos que dá nome ao show, Meredith Grey, é filha de um famoso cirurgião. Meredith luta para manter as relações com seus colegas,
-     especialmente o chefe do centro cirúrgico, Richard Webber.
+        Centenas de competidores sem dinheiro aceitam um convite para competir em jogos infantis por um prêmio tentador,
+        mas as apostas são mortais.
     </p>
      
     <li>Simplesmente acontece</li>
@@ -20,7 +20,7 @@
     <li>Friends</li>
     <li>sherek</li><br><br>
 
-    <img src="Round6.webp" alt=""><br><br>
+    <img src="img.round.webp" alt=""><br><br>
 
 <footer> &copy;Bruna Raphaeli 2024 </footer>
 
