--- a/CSS/05/CSS/05/Margin/index.html
+++ b/CSS/05/CSS/05/Margin/index.html
@@ -75,10 +75,10 @@
             <td>08/12/28</td>
         </tr>
     </tbody>
-</table>
+</table><br><br>
 <figure>
-    <img src="./mercado.jpg" alt="Mercado do Pipoca">
     <figcaption>Supermecado do Pipoca</figcaption>
+    <img src="./mercado.jpg" alt="Mercado do Pipoca">
 </figure>
 </body>
 
