--- a/CSS/CSS07-Pseudo/exercicioCasa/index.html
+++ b/CSS/CSS07-Pseudo/exercicioCasa/index.html
@@ -9,16 +9,14 @@
 
 <body>
      <br><br>
-     <p id="Pseudo">Aqui existe um paragrafo</p>
 
-     <h3 id="titulo3">titulo</h3>
+     <h3>Titulo</h3>
      <p id="paragrafoHover"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, necessitatibus laboriosam, 
      culpa aut eligendi sed,eveniet ullam ipsa ducimus dicta obcaecati voluptate a explicabo!
      Explicabo quisquam ab enim debitis saepe!</p>
-
      <button id="botao">Clique aqui</button>
      
-     <img id="" src="imagem.jpg" alt="">
+     <img src="imagem.avif" alt="">
 
      
 
