--- a/CSS/CSS06-Float/index.html
+++ b/CSS/CSS06-Float/index.html
@@ -1,11 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Jersey+25&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+  <title>Attack on Titan</title>
 </head>
+
 <body>
-    
+  <div class="container">
+    <header>
+      <h1>Attack on Titan</h1>
+    </header>
+  </div>
+
+  <div class="container">
+    <main>
+      <section id="sinopse">
+        <p>
+          <img src="./imagem1.jpg" alt="Imagem do Attack on Titan">
+          Attack on Titan, ou Shingeki no Kyojin como é popularmente conhecido, estreou em 2013, encantando
+          espectadores com sua animação impressionante e enredo cativante. Com uma mistura de ação, suspense e 
+          até mesmo intriga política.
+          Conquistou não apenas os fãs habituais de animes e mangás, mas também um público mais amplo.
+          Hajime Isayama disse que queria criar uma história com criaturas gigantes devoradoras de humanos
+         que possuem uma aparência crua e grotesca que transmitisse um sentimento de insegurança.
+
+          <a href="https://aminoapps.com/c/shingeki-no-kyojin-aot-brasil/page/item/resumo-1a-temporada-de-snk/D884_YlnfNILpPXg2R1JejQNQ8r5vo051qk"
+            class="button">SAIBA
+            MAIS</a>
+        </p>
+      </section>
+
+      <br>
+
+      <section id="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZLAVlaQPHgY?si=kSRE3iCF51stGJA_" 
+        title="YouTube video player" frameborder="0" allow="accelerometer;
+         autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>
+          <strong>Data do primeiro episódio:</strong>Em 6 de abril de 2013, o mundo ficou hipnotizado pelo impactante
+          início de "Attack on Titan" (ou "Shingeki no Kyojin"), um marco na história da animação que iria conquistar
+          admiradores em todos os cantos do planeta.
+          <br>
+          <strong>Rede inglesa:</strong>"Attack on Titan" foi transmitido na televisão britânica através da plataforma
+          de streaming Crunchyroll.
+          <br>
+          <strong>Adaptado de: </strong>"Attack on Titan" é uma série de anime adaptada do mangá japonês de Hajime
+          Isayama, mantendo-se fiel à história e à visão do autor. <br>
+          <strong>Rede original:</strong>Inicialmente, o anime "Attack on Titan" foi transmitido no Japão pela emissora
+          MBS (Mainichi Broadcasting System), além de outras redes parceiras, incluindo a Tokyo MX.
+        </p>
+      </section>
+
+      <br><br>
+
+      <section id="noticias">
+        <div class="curiosidades">
+          <img src="./imagem2.webp" alt="Imagem Anime Awards">
+          <p class="resumo">
+            Devido ao seu conteúdo dramático e à constante sensação de perigo iminente para seus personagens, Attack on
+            Titan emergiu como um dos animes mais discutidos nos últimos anos, retratando a incerteza e a
+            vulnerabilidade de cada um deles.
+            <a href="https://quartaparede.com.br/made-in-japan/anime/attack-on-titan-e-eleito-anime-do-ano-no-crunchyroll-anime-awards-2022-confira-os-vencedores/"
+              class="button">SAIBA
+              MAIS</a>
+          </p>
+        </div>
+        <div class="curiosidades">
+          <img src="./imagem3.jpg" alt="Imagem do anime Attack on Titan">
+          <p class="resumo">
+           Nesta quarta-feira (9), a Crunchyroll anunciou os vencedores de cada categoria do Anime Awards 2022. Os
+            holofotes se voltaram para Attack on Titan, consagrado como o Anime do Ano, e para Demon Slayer, que recebeu
+            o prêmio de Melhor Animação de 2021.
+            <a href="https://animerant.com.br/anime-manga/10-mortes-mais-tristes-de-attack-on-titan/"
+              class="button">SAIBA
+              MAIS</a>
+          </p>
+        </div>
+        <div class="curiosidades">
+          <img src="./imagem4.jpg" alt="Imagem do anime Attack on Titan">
+          <p class="resumo">
+            Depois de mais de uma década acompanhando os envolventes personagens como Eren, Mikasa e Armin em Attack on
+            Titan (ou Shingeki no Kyojin), o anime chegou ao seu aguardado episódio final em 4 de novembro deste ano. A
+            notícia animadora é que o desfecho deixou espaço para uma possível continuação!
+            <a href="https://ovicio.com.br/attack-on-titan-tera-sequencia-entenda-a-cena-pos-creditos/#:~:text=Assim%2C%20tudo%20indica%20que%20o%20ciclo%20recome%C3%A7ar%C3%A1.%20Attack,n%C3%A3o%20foi%20continuada%20de%20nenhuma%20forma%20pelo%20criador."
+              class="button">SAIBA
+              MAIS</a>
+          </p>
+        </div>
+        <div class="curiosidades">
+          <img src="./imagem5.jpg" alt="Imagem do Anime Attack on Titan">
+          <p class="resumo">
+            Por meio de uma publicação nas redes sociais, a equipe oficial de Attack on Titan anunciou que a abertura
+            "The Rumbling", que serve como a introdução oficial da temporada final, alcançou mais de 10 milhões de
+            visualizações no YouTube, estabelecendo-se como um dos vídeos mais populares de 2022 até agora.
+            <a href="https://ovicio.com.br/attack-on-titan-tera-sequencia-entenda-a-cena-pos-creditos/#:~:text=Assim%2C%20tudo%20indica%20que%20o%20ciclo%20recome%C3%A7ar%C3%A1.%20Attack,n%C3%A3o%20foi%20continuada%20de%20nenhuma%20forma%20pelo%20criador."
+              class="button">SAIBA
+              MAIS</a>
+          </p>
+        </div>
+      </section>
+    </main>
+  </div>
+
+  <footer>
+    <p>2022</p>
+  </footer>
+  </div>
+
 </body>
+
 </html>
