--- a/CSS/CSS11-Grid/index.html
+++ b/CSS/CSS11-Grid/index.html
@@ -2,11 +2,11 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid CSS</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <div id="container">
         <div class="itens" id="item-1">item-1</div>
         <div class="itens" id="item-2">item-2</div>
@@ -16,12 +16,9 @@
         <div class="itens" id="item-6">item-6</div>
         <div class="itens" id="item-7">item-7</div>
         <div class="itens" id="item-8">item-8</div>
-        <div class="itens" id="item-9">item-9</div>
 
 
-
-
-    </div>
+    </div>  
     
 </body>
 </html>
