--- a/CSS/CSS12-Bros/teste.html
+++ b/CSS/CSS12-Bros/teste.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap<en/title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <header>
-          <h1>ZippyNikki</h1>
-        </header>
-      </div>
-    
-</body>
-</html>
+
+  <header>
+<!-- As a link bg= backgrou color-->
+<nav class="navbar bg-primary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+  </div>
+</nav>
+
+<!-- As a heading -->
+<nav class="navbar bg-body-tertiary">
+  <div class="container-fluid">
+    <span class="navbar-brand mb-0 h1">Navbar</span>
+  </div>
+</nav>
+
+  </header>
+
+
+
+
+  <nav class="navbar bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24"
+         class="d-inline-block align-text-top">
+        Bootstrap
+      </a>
+    </div>
+  </nav>
